syntaxhighlight: fix table background on overflow #569

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -671,6 +671,10 @@ div.highlight > div{
     border-style: solid;
     border-width: 1px;
 }
+/* remove default style for usual markdown tables */
+div.highlight > div table{
+    background-color: transparent;
+}
 /* disable selection for lineno cells */
 div.highlight > div td:first-child:not(:last-child){
     user-select: none;
